# rotation_sensing

./: README.md  ota_update.py  p.txt  steam_deck_ui.py  test_sdl.cpp
LED_Debug/: CMakeLists.txt  README.md
LED_Debug/main/: main.c
algorithm_test/: analyze_optimized_csi.py  analyze_pipeline.py  build_log.txt  capture_benchmark.py  esp32_manual_section.md  generate_test_data.py  hex_dump.py  interactive_logger.py  logger.py  rssi_visualizer.py  sdkconfig  sdkconfig.old  simd_notes.md  visualizer.py
algorithm_test/cleaned_runs/: csi_log2_part_10.csv  csi_log2_part_103.csv  (+47 more)
deck_app/: .gitignore  CMakeLists.txt  README.md
deck_app/include/: DataLogger.h  GamepadInput.h  SerialPort.h  protocol.h
deck_app/src/: DataLogger.cpp  GamepadInput.cpp  SerialPort.cpp  main.cpp
ota_server/: CMakeLists.txt
receiver/: analyze_csi.py  benchmark_algo.py  check_csv.py  cleaner.py  debug_bin.py  deploy_steam_deck_app.sh  dump.csv  dump_slot00.csv  dump_slot01.csv  dump_slot01.json  dump_slot02.csv  dump_slot03.csv  dump_slot04.csv  dump_slot04.json  dump_slot05.csv  dump_slot06.csv  dump_slot07.csv  dump_slot08.csv  dump_slot09.csv  dump_slot10.csv  dump_slot11.csv  dump_slot12.csv  dump_slot13.csv  dump_slot14.csv  dump_slot15.csv  extract_dump.py  find_spike.py  log_cleaner.py  partitions.csv  plot_dump.py  plot_timestamp_histogram.py  print_data.py  print_samples.py  rotation_algo.py  sdkconfig  sdkconfig.old  simulate_c_rotation.py  simulate_rotation.py  simulate_window_sweep.py
sender/: partitions.csv  sdkconfig  sdkconfig.old  sender_test.py  steam_deck_app.py  tui.py
(+1025 files in other folders)
